<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- Change to your own main package name. -->
    <groupId>com.staxzs</groupId>

    <!-- Change to your plugin name, must be lower cased and match your end package name. No spaces. -->
    <artifactId>staxzstrolls</artifactId>

    <!-- Change to your plugin's name. Can contain capital letters, but do NOT use spaces. -->
    <name>StaxzsTrolls</name>

    <!-- Change to the appropriate plugin's version, starting at 1.0.0. -->
    <version>1.0.0</version>

    <!-- DO NOT EDIT. -->
    <packaging>jar</packaging>

    <properties>

        <!-- Change to your name or the main project author. -->
        <author>Staxzs</author>

        <!-- Change to the full path where your main plugin class is located. -->
        <main.class>com.staxzs.staxzstrolls.StaxzsTrolls</main.class>

        <!-- Change the Java version this plugin is built on.

             IMPORTANT: For Java 8, version is "1.8", for Java 11+ it is only "11" or "17".

             If you use 1.8 then your plugin will work on newer versions,
             but if you use "11" or "17" then it will NOT load on servers
             with previous Java versions. We recommend you stick with 1.8.
             -->
        <java.version>1.8</java.version>

        <!-- Change to the latest version from https://github.com/kangarko/Foundation/releases
             or change to "LATEST" if you downloaded Foundation to your disk and compiled it. -->
        <foundation.version>6.6.4</foundation.version>

        <!-- Leave on "com.github.kangarko" if you use Foundation from GitHub like most people,
             or change to "org.mineacademy" if you downloaded our library to your disk and compiled it. -->
        <foundation.path>org.mineacademy</foundation.path>

        <!-- DO NOT EDIT. -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <repositories>
        <!-- DO NOT EDIT, used to pull Foundation from the JitPack site. -->
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>

        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
    </repositories>

    <dependencies>

        <!-- (Optional) Access the server jar for NMS (groupId, artifactId and version do not matter,
             but keep version in artifactId and not in version if using multiple NMS imports,
             otherwise Maven will fail to import them correctly).

             NB: The <systemPath> is set to the "library" folder in your source folder (in the same parent
                 directory where you have "target" and will look for file patched_1.8.8.jar there as an example. -->
        <!--<dependency>
            <groupId>paper-server</groupId>
            <artifactId>Paper-1.8.8</artifactId>
            <version>1</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/library/patched_1.8.8.jar</systemPath>
        </dependency>-->

        <!-- We do not need to import Spigot API since the latest version of it is made available through Foundation below.
            If you want to code for another version, import it above Foundation as per https://www.spigotmc.org/wiki/spigot-maven/ -->

        <!-- Use our Foundation library. It contains the latest Spigot API, you only need to import that if you build
             for a different version. In that case, place your API above Foundation so Maven will prioritize it. -->
        <dependency>
            <groupId>org.mineacademy</groupId>
            <artifactId>Foundation</artifactId>
            <version>6.6.4</version>
        </dependency>

        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.20.4-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <!-- DO NOT EDIT unless instructed to do so or you know what you're doing. -->
    <build>
        <finalName>${project.name}-${project.version}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>

                <!-- Change version to the latest one from
                     https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-jar-plugin -->
                <version>3.3.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>

                <!-- Change version to the latest one from
                     https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
                <version>3.12.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>

                <!-- Change version to the latest one from
                     https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-shade-plugin -->
                <version>3.5.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                    <artifactSet>
                        <includes>
                            <include>${foundation.path}:Foundation*</include>
                        </includes>
                    </artifactSet>
                    <relocations>
                        <!-- Move the Foundation library into your own package in "lib" subpackage to prevent interference. -->
                        <relocation>
                            <pattern>org.mineacademy.fo</pattern>
                            <shadedPattern>${project.groupId}.${project.artifactId}.lib</shadedPattern>
                        </relocation>
                    </relocations>
                </configuration>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>
</project>
